--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <body>
     <h1>First Github Page</h1>
+    <a class="twitter-timeline" href="https://twitter.com/StandingRockST">Tweets by StandingRockST</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
+  
   
   <style>
     body {
